# GatewayIDE

./: .gitignore  GatewayIDE.lnk  GatewayIDE.sln  README.md  Textdokument (neu).txt  build-win.bat  demoenv.env  pyproject.toml
GatewayIDE.App/: App.axaml  Converters.cs  GatewayIDE.App.csproj  MainWindow.axaml  MainWindow.axaml.cs  Program.cs
GatewayIDE.App/ViewModels/: MainWindowViewModel.cs
backend/: agent.py  bootstrap.py  main.py  reset_utils.py
backend/agent_core/: agent_blueprint.json  agents.py  core.py  core_agents.json  demo_adapter.py  hma_config.py  konstruktor.py  llm_adapter.py  messaging.py  messaging_protocol.py  pbuffer.py  router.py  speaker.py  tool_reg.py
backend/legacy/: bootstrap.py  core.py  groupchat_manager.py  prompts.py  tools.py
backend/memory/: README.md  __init__.py  graph_api.py  graph_utils.py  manager.py  memory.py  memory_tools.py  memory_utils.py  memory_wrapper.py  memory_zep_graph.py  memory_zep_thread.py  thin facade.txt
backend/routes/: agent_hq.py  agents.py  apis.txt  chat_api.py  conference.py  library_api.py  memory_api.py  reset_api.py  settings.py  status_api.py  websocket.py  ws_utils.py
deploy/: gateway-compose.yml
docs/: ARCHITECTURE.md  Filestrukture.md  GatewayIDE.txt  GatewayIDE_Legacy_Reintegration.md  agenten_dashboard_doku.md  agenten_ui_architektur.md  offene punkte.txt  root.md
pbuffer/: 01db5954-012c-4c62-ad00-22b778d3a1f6_1761028755_user.txt  3c8f8fae-c508-42ab-bdaa-f5369365fb52_1761031403_user.txt  533f9245-fbf6-46cf-9df6-9effb26ed4e6_1761030946_user.txt  8094281b-092d-4011-9534-01e6a96a19fa_1761030357_user.txt  83175c3d-554c-4b8d-b0d1-7e532cf2b876_1761027870_user.txt  9126f587-022d-4dde-810b-f097fb0e4b6d_1761029197_user.txt  b8519776-7725-42cb-a74e-c245a2761dc5_1761042079_user.txt  bb7364e2-e928-428b-9a5a-bc59a785abf5_1761028158_user.txt  be338a86-5e55-4bda-8287-35172e7cfcdf_1761027270_user.txt  c57e02b0-d92d-43e2-93ea-2646cea4e804_1761029211_user.txt
protos/: ai_service.proto
(+57 files in other folders)
